# Linear-Discriminant-Analysis

./: CMakeLists.txt  README.md
include/: DimReduction.hpp
src/: DimReduction.cpp  Main.cpp
